--- a/i18n/po/sq.po
+++ b/i18n/po/sq.po
@@ -44,8 +44,8 @@ msgid "* A payment proposal can be deleted if 1) you are the creator, and no oth
 msgstr "* A payment proposal can be deleted if 1) you are the creator, and no other copayer has signed, or 2) 24 hours have passed since the proposal was created."
 
 #: public/views/disclaimer.html
-msgid "<b>IF YOU LOSE ACCESS TO YOUR Groestlcoin Mobile Wallet WALLET OR YOUR ENCRYPTED PRIVATE KEYS AND YOU HAVE NOT SEPARATELY STORED A BACKUP OF YOUR WALLET AND CORRESPONDING PASSWORD, YOU ACKNOWLEDGE AND AGREE THAT ANY CAPRICOIN YOU HAVE ASSOCIATED WITH THAT Groestlcoin Mobile Wallet WALLET WILL BECOME INACCESSIBLE.</b>"
-msgstr "<b>IF YOU LOSE ACCESS TO YOUR Groestlcoin Mobile Wallet WALLET OR YOUR ENCRYPTED PRIVATE KEYS AND YOU HAVE NOT SEPARATELY STORED A BACKUP OF YOUR WALLET AND CORRESPONDING PASSWORD, YOU ACKNOWLEDGE AND AGREE THAT ANY CAPRICOIN YOU HAVE ASSOCIATED WITH THAT Groestlcoin Mobile Wallet WALLET WILL BECOME INACCESSIBLE.</b>"
+msgid "<b>IF YOU LOSE ACCESS TO YOUR GroestlPay WALLET OR YOUR ENCRYPTED PRIVATE KEYS AND YOU HAVE NOT SEPARATELY STORED A BACKUP OF YOUR WALLET AND CORRESPONDING PASSWORD, YOU ACKNOWLEDGE AND AGREE THAT ANY CAPRICOIN YOU HAVE ASSOCIATED WITH THAT GroestlPay WALLET WILL BECOME INACCESSIBLE.</b>"
+msgstr "<b>IF YOU LOSE ACCESS TO YOUR GroestlPay WALLET OR YOUR ENCRYPTED PRIVATE KEYS AND YOU HAVE NOT SEPARATELY STORED A BACKUP OF YOUR WALLET AND CORRESPONDING PASSWORD, YOU ACKNOWLEDGE AND AGREE THAT ANY CAPRICOIN YOU HAVE ASSOCIATED WITH THAT GroestlPay WALLET WILL BECOME INACCESSIBLE.</b>"
 
 #: public/views/backup.html
 msgid "<b>OR</b> 1 wallet export file and the remaining quorum of wallet seeds (e.g. in a 3-5 wallet: 1 wallet export file + 2 wallet seeds of any of the other copayers)."
@@ -65,7 +65,7 @@ msgstr "A multisignature Groestlcoin wallet"
 
 #: public/views/preferences.html
 msgid "About GroestlPay"
-msgstr "Rreth Groestlcoin Mobile Wallet"
+msgstr "Rreth GroestlPay"
 
 #: public/views/modals/txp-details.html
 #: src/js/services/confirmDialog.js
@@ -117,7 +117,7 @@ msgstr "Nofka për <i>{{index.walletName}}</i>"
 
 #: public/views/translators.html
 msgid "All contributions to GroestlPay's translation are welcome. Sign up at crowdin.com and join the GroestlPay project at"
-msgstr "All contributions to Groestlcoin Mobile Wallet's translation are welcome. Sign up at crowdin.com and join the Groestlcoin Mobile Wallet project at"
+msgstr "All contributions to GroestlPay's translation are welcome. Sign up at crowdin.com and join the GroestlPay project at"
 
 #: public/views/disclaimer.html
 msgid "All transaction requests are irreversible."
@@ -309,19 +309,19 @@ msgstr "Connecting to {{join.hwWallet}} Wallet..."
 
 #: src/js/services/bwsError.js
 msgid "copayer already in this wallet"
-msgstr "Groestlcoin Mobile Walleter already in this wallet"
+msgstr "GroestlPayer already in this wallet"
 
 #: src/js/services/bwsError.js
 msgid "copayer already voted on this spend proposal"
-msgstr "Groestlcoin Mobile Walleter already voted on this spend proposal"
+msgstr "GroestlPayer already voted on this spend proposal"
 
 #: src/js/services/bwsError.js
 msgid "copayer data mismatch"
-msgstr "Groestlcoin Mobile Walleter data mismatch"
+msgstr "GroestlPayer data mismatch"
 
 #: public/views/modals/copayers.html
 msgid "copayers"
-msgstr "Groestlcoin Mobile Walleters"
+msgstr "GroestlPayers"
 
 #: src/js/controllers/copayers.js
 #: src/js/controllers/export.js
@@ -680,7 +680,7 @@ msgstr "Hardware Wallet"
 
 #: public/views/import.html
 msgid "Have a Backup from GroestlPay v0.9?"
-msgstr "Have a Backup from Groestlcoin Mobile Wallet v0.9?"
+msgstr "Have a Backup from GroestlPay v0.9?"
 
 #: public/views/create.html
 #: public/views/import.html
@@ -769,7 +769,7 @@ msgstr "Invalid address"
 
 #: src/js/controllers/copayers.js
 msgid "Invitation to share a GroestlPay Wallet"
-msgstr "Invitation to share a Groestlcoin Mobile Wallet Wallet"
+msgstr "Invitation to share a GroestlPay Wallet"
 
 #: public/views/translators.html
 msgid "Italian"
@@ -790,7 +790,7 @@ msgstr "Join"
 
 #: src/js/controllers/copayers.js
 msgid "Join my GroestlPay wallet. Here is the invitation code: {{secret}} You can download GroestlPay for your phone or desktop at https://GroestlPay.io"
-msgstr "Join my Groestlcoin Mobile Wallet wallet. Here is the invitation code: {{secret}} You can download Groestlcoin Mobile Wallet for your phone or desktop at https://GroestlPay.io"
+msgstr "Join my GroestlPay wallet. Here is the invitation code: {{secret}} You can download GroestlPay for your phone or desktop at https://GroestlPay.io"
 
 #: public/views/add.html
 msgid "Join shared wallet"
@@ -814,7 +814,7 @@ msgstr "Last Wallet Addresses"
 
 #: public/views/backup.html
 msgid "Learn more about GroestlPay backups"
-msgstr "Learn more about Groestlcoin Mobile Wallet backups"
+msgstr "Learn more about GroestlPay backups"
 
 #: public/views/importLegacy.html
 msgid "Learn more about Wallet Migration"
@@ -1012,11 +1012,11 @@ msgstr "Payment Proposal Rejected"
 
 #: src/js/services/notificationsService.js
 msgid "Payment Proposal Rejected by copayer"
-msgstr "Payment Proposal Rejected by Groestlcoin Mobile Walleter"
+msgstr "Payment Proposal Rejected by GroestlPayer"
 
 #: src/js/services/notificationsService.js
 msgid "Payment Proposal Signed by copayer"
-msgstr "Payment Proposal Signed by Groestlcoin Mobile Walleter"
+msgstr "Payment Proposal Signed by GroestlPayer"
 
 #: public/views/walletHome.html
 msgid "Payment Proposals"
@@ -1084,7 +1084,7 @@ msgstr "Please enter the wallet seed"
 
 #: src/js/services/bwsError.js
 msgid "Please upgrade GroestlPay to perform this action"
-msgstr "Please upgrade Groestlcoin Mobile Wallet to perform this action"
+msgstr "Please upgrade GroestlPay to perform this action"
 
 #: src/js/controllers/import.js
 msgid "Please, select your backup file"
@@ -1594,7 +1594,7 @@ msgstr "Wallet Already Imported:"
 
 #: src/js/services/profileService.js
 msgid "Wallet already in GroestlPay:"
-msgstr "Wallet already in Groestlcoin Mobile Wallet:"
+msgstr "Wallet already in GroestlPay:"
 
 #: public/views/preferencesInformation.html
 msgid "Wallet Configuration (m-n)"
@@ -1718,7 +1718,7 @@ msgstr "We reserve the right to modify this disclaimer from time to time."
 
 #: public/views/splash.html
 msgid "WELCOME TO COPAY"
-msgstr "WELCOME TO Groestlcoin Mobile Wallet"
+msgstr "WELCOME TO GroestlPay"
 
 #: public/views/disclaimer.html
 msgid "While the software has undergone beta testing and continues to be improved by feedback from the open-source user and developer community, we cannot guarantee that there will be no bugs in the software."
